--- a/Bender.yml
+++ b/Bender.yml
@@ -21,7 +21,7 @@ dependencies:
   idma:                   { git: "https://github.com/pulp-platform/iDMA.git", rev: 437ffa9dac5dea0daccfd3e8ae604d4f6ae2cdf1 } # branch: master
   cluster_icache:         { git: "https://github.com/pulp-platform/cluster_icache.git", rev: "229ed4ff412024a8c41cc8817e532f92beeb2c4a" }
   cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: 0b8e8ab } # branch: fc/hci-v2
-  axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.1-beta  }
+  axi:                    { git: "https://github.com/pulp-platform/axi.git", version: 0.39.3  }
   timer_unit:             { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.2 }
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.35.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
