--- a/Bender.yml
+++ b/Bender.yml
@@ -33,7 +33,7 @@ dependencies:
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.4  } # branch: master
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: c37bdb47339bf70e8323de8df14ea8bbeafb6583 } # branch: astral_rebase
   redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 60ba008c339ec70b5ffa7120bec2cbf5a8f53c99 } # branch: fc/hci-v2.1
-  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: 6221fd4d17809166333ace71aec37b58ac28ce72 } # branch: hci-v2
+  neureka:                { git: "https://github.com/pulp-platform/neureka.git", version: 1.0.0 }
 
 export_include_dirs:
   - include
