--- a/Bender.yml
+++ b/Bender.yml
@@ -30,8 +30,9 @@ dependencies:
   riscv-nn:               { git: "git@iis-git.ee.ethz.ch:pulpissimov2/riscv-nn.git", rev: "0dfabc78b04173b24d9bf698e00b5192d1285773"}
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", version: 1.1.0}
-  hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
-  hci:                    { git: "https://github.com/pulp-platform/hci.git", version: 1.0.8 }
+  # hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
+  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: "b6141132d915b3fa5c1db712b730ac463a949a34" }
+  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: "afe0220f9a2f132dc8655c48da05aae5121a570b" }
 
 sources:
     # Source files grouped in levels. Files in level 0 have no dependencies on files in this
