--- a/Bender.yml
+++ b/Bender.yml
@@ -27,11 +27,14 @@ dependencies:
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
   #cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: "pulpissimo-v3.4.0-rev4"}
-  riscv-nn:               { git: "git@iis-git.ee.ethz.ch:pulpissimov2/riscv-nn.git", rev: "0dfabc78b04173b24d9bf698e00b5192d1285773"}
+  riscv-nn:               { git: "git@iis-git.ee.ethz.ch:pulpissimov2/riscv-nn.git", rev: "d0eefce98e259ad678d4863e2a8d8adc1fb4c4ea"}
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", version: 1.1.0}
   hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
   hci:                    { git: "https://github.com/pulp-platform/hci.git", version: 1.0.8 }
+  idma:                   { git: "https://github.com/pulp-platform/idma.git", rev: "d6d7d99b67648e9b02e081c1504f8dd108a8d99b" }
+  obi:                    { git: "https://github.com/pulp-platform/obi.git", rev: "2ee698211db5c007bd0d207ebd646ce79f0472ec" }
+  register_interface:     { git: "https://github.com/pulp-platform/register_interface.git",  version: 0.4.3  }
 
 sources:
     # Source files grouped in levels. Files in level 0 have no dependencies on files in this
