--- a/Bender.yml
+++ b/Bender.yml
@@ -19,7 +19,7 @@ dependencies:
   event_unit_flex:        { git: "https://github.com/pulp-platform/event_unit_flex.git", rev: "1.4.1" }
   mchan:                  { git: "https://github.com/pulp-platform/mchan.git", version: 1.2.3 }
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: "fc231dfc9559c6715c3577049eae3d1887282cb0" }
-  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", version: 2.1.0 }
+  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: "bd662f72d98b5f567967f51494472ee8472b07f7" }
   fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "66b4084117546d5b748c30b5500769805f489d2f" }
   axi:                    { git: "https://github.com/pulp-platform/axi.git", version: 0.39.1  }
   axi_slice:              { git: "https://github.com/pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
@@ -30,8 +30,7 @@ dependencies:
   riscv-nn:               { git: "git@iis-git.ee.ethz.ch:pulpissimov2/riscv-nn.git", rev: "0dfabc78b04173b24d9bf698e00b5192d1285773"}
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", version: 1.1.0}
-  # hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
-  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: "b6141132d915b3fa5c1db712b730ac463a949a34" }
+  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: "8e0883bd0c19c6844122456c749c2bdfde18011f" }
   hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: "afe0220f9a2f132dc8655c48da05aae5121a570b" }
 
 sources:
