changes not working on compute server?

--- a/Bender.yml
+++ b/Bender.yml
@@ -32,7 +32,7 @@ dependencies:
   hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: afe0220 } # branch: master
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.4  }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: c37bdb47339bf70e8323de8df14ea8bbeafb6583 } # branch: astral_rebase
-  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 60ba008c339ec70b5ffa7120bec2cbf5a8f53c99 } # branch: fc/hci-v2.1
+  redmule:                { git: "https://github.com/eugeniomuscinelli/redmule.git", rev: 971c41af81fa9433912fe48bf056db948a93853d } # branch: EM
   neureka:                { git: "https://github.com/pulp-platform/neureka.git", version: 1.0.0 }
   softex:                 { git: "https://github.com/belanoa/softex.git"       , version: 1.0.0 }
 
