--- a/Bender.yml
+++ b/Bender.yml
@@ -34,7 +34,7 @@ dependencies:
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.4  }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 49e714b97a19a7aaddf064ae2757c8f02d1f62dc } # branch: astral-v0
   redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 9223ccc } # branch: astral-hci-v2.1
-  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: 94528df } # branch: fc/astral-v1.0-rebased
+  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: 3f4f691743326f89930058be6b88417a88811fa8 } # branch: fc/astral-v1.0-rebased2
   softex:                 { git: "https://github.com/belanoa/softex.git"       , version: 1.0.0 }
 
 export_include_dirs:
