--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+.bender/
+work/
+modelsim.ini
+transcript
 scripts/compile.tcl
-regression-tests/
+regression_tests/
 pulp-runtime/
 fault_injection_sim/
