--- a/Bender.yml
+++ b/Bender.yml
@@ -30,7 +30,7 @@ dependencies:
   cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: astral-v1.0 }
   ibex:                   { git: "https://github.com/pulp-platform/ibex.git", rev: "pulpissimo-v6.1.2" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: v1.2.0 }
-  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: df0540ad43ae3b693c040587a50477558f183374 }
+  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: 2d5ae7877125a8b5415ae343f1c7c401d4596e15 } # branch: smazzola/chimera
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.4  }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: astral-v1.0 }
   redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: astral-v1.0 }
