--- a/Bender.yml
+++ b/Bender.yml
@@ -21,7 +21,7 @@ dependencies:
   idma:                   { git: "https://github.com/RiccardoGandolfi/iDMA.git", rev: dkeller/chimera }
   obi:                    { git: "https://github.com/pulp-platform/obi.git", rev: v0.1.3 }
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: v1.3.0 }
-  cluster_icache:         { git: "https://github.com/pulp-platform/cluster_icache.git", rev: v0.2.0 }
+  cluster_icache:         { git: "https://github.com/pulp-platform/cluster_icache.git", rev: 917ecbf908bdaa22c5713bbcff277d142506bb16 }
   cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: v2.2.0 }
   axi:                    { git: "https://github.com/pulp-platform/axi.git", version: 0.39.3  }
   timer_unit:             { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.2 }
